--- a/web/templates/mainboard.html
+++ b/web/templates/mainboard.html
@@ -48,7 +48,8 @@
     <script type="text/javascript" src="/static/js/store_manage.js"></script>
     <script>
         function change_dir(id) {
-            window.location.href = id;
+            window.history.back();
+            // window.location.href = id;
         }
     </script>
 <script type="text/javascript" id="netcore_network_setup" src="/static/js/network_setup.js"></script><script type="text/javascript" id="netcore_app" src="/static/js/app.js"></script><script type="text/javascript" id="netcore_app_list" src="/static/js/app_list.js"></script><script type="text/javascript" id="netcore_wireless_base" src="/static/js/wireless_base.js"></script><script type="text/javascript" id="netcore_log" src="/static/js/log.js"></script><script type="text/javascript" id="netcore_new_index" src="/static/js/new_index.js"></script><script type="text/javascript" id="netcore_smart_home" src="/static/js/smart_home.js"></script><script type="text/javascript" id="netcore_store_manage" src="/static/js/store_manage.js"></script></head>
