--- a/web/templates/info.html
+++ b/web/templates/info.html
@@ -5,7 +5,7 @@
     <div class="nav">
         <a href="javascript:void(0)">网关设置&nbsp;&gt;</a>
         <a href="javascript:void(0)">我的路由信息&nbsp;</a>
-        <button class="return_a" onclick="change_dir('/setup')">返回</button>
+        <button class="return_a">返回</button>
     </div>
     <style type="text/css">
         .router_info .box-title{text-align: left;font-size: 20px;}
@@ -86,20 +86,9 @@
                 <a id="cutoff_link" href="javascript:void(0);"></a>
             </div>
         </div>
-        <div class="item_wrap" hidden>
-            <div class="info" id="home_net_info">家庭网络信息</div>
-            <div class="router_info_content">
-                <div class="left_info_content">
-                    <ul class="left_info_ul">
-                        <li><span id="lanIp">路由器IP地址：</span><span id="routerInfo_lanIp">192.168.100.1</span></li>
-                        <li><span id="lanMask">子网掩码：</span><span id="routerInfo_mask">255.255.255.0</span></li>
-                    </ul>
-                </div>
-                <ul class="right_info_ul">
-                    <li><span id="dhcp_status">DHCP服务器状态：</span><span id="routerInfo_dhcp_status">开启</span></li>
-                    <li><span id="dhcp_range">DHCP地址池范围：</span><span id="routerInfo_dhcp_range">192.168.100.2~192.168.100.254</span></li>
-                </ul>
-            </div>
+        <div class="item_wrap">
+            <div class="info" id="task_info">任务信息</div>
+            
         </div>
     </div>
 </div>
