--- a/web/templates/mainboard.html
+++ b/web/templates/mainboard.html
@@ -27,6 +27,7 @@
 	<script type="text/javascript" src="/static/js/jq.js"></script>
     <script type="text/javascript" src="/static/js/jquery.js"></script>
     <script type="text/javascript" src="/static/js/jquery_002.js"></script>
+    <script type="text/javascript" src="/static/js/gateway.js"></script>
     <script type="text/javascript" src="/static/js/cookie.js"></script>
     <script type="text/javascript" src="/static/js/module.js"></script>
     <script type="text/javascript" src="/static/js/err.js"></script>
@@ -47,10 +48,7 @@
     <script type="text/javascript" src="/static/js/smart_home.js"></script>
     <script type="text/javascript" src="/static/js/store_manage.js"></script>
     <script>
-        function change_dir(id) {
-            window.history.back();
-            // window.location.href = id;
-        }
+
     </script>
 <script type="text/javascript" id="netcore_network_setup" src="/static/js/network_setup.js"></script><script type="text/javascript" id="netcore_app" src="/static/js/app.js"></script><script type="text/javascript" id="netcore_app_list" src="/static/js/app_list.js"></script><script type="text/javascript" id="netcore_wireless_base" src="/static/js/wireless_base.js"></script><script type="text/javascript" id="netcore_log" src="/static/js/log.js"></script><script type="text/javascript" id="netcore_new_index" src="/static/js/new_index.js"></script><script type="text/javascript" id="netcore_smart_home" src="/static/js/smart_home.js"></script><script type="text/javascript" id="netcore_store_manage" src="/static/js/store_manage.js"></script></head>
 <body style="background: rgb(243, 244, 246) none repeat scroll 0% 0%;">
