--- a/web/templates/restart.html
+++ b/web/templates/restart.html
@@ -4,14 +4,14 @@
     <div class="nav">
         <a href="javascript:void(0)">网关设置&nbsp;&gt;</a>
         <a href="javascript:void(0)">重启网关&nbsp;</a>
-        <button class="return_a" onclick="change_dir('/setup')">返回</button>
+        <button class="return_a">返回</button>
     </div>
     <div class="fix_ie_shadow"></div>
     <div class="form-border-shadow has-tab">
-    	<div id="reboot_mode_layer" class="tab_area">
+    	<!-- <div id="reboot_mode_layer" class="tab_area">
     		<div data-type-index="0" id="div_reboot_now_title" class="tab-item on">立即重启</div>
     		<div data-type-index="1" id="div_reboot_timed_title" class="tab-item">定时重启</div>
-    	</div>
+    	</div> -->
         <div class="app-box" id="reboot_now_div" style="padding-top:20px;">
             <div class="box-bd">
                 <form id="soft_reboot_form" class="form-area" method="post" action="javascript:void(0);">
