--- a/web/templates/change_passwd.html
+++ b/web/templates/change_passwd.html
@@ -6,7 +6,7 @@
     <div class="nav">
         <a href="javascript:void(0)">网关设置&nbsp;&gt;</a>
         <a href="javascript:void(0)">修改管理密码&nbsp;</a>
-        <button class="return_a" onclick="change_dir('mainpage')">返回</button>
+        <button class="return_a">返回</button>
     </div>
     <div class="fix_ie_shadow"></div>
     <div class="form-border-shadow">
