--- a/web/templates/restore.html
+++ b/web/templates/restore.html
@@ -5,7 +5,7 @@
     <div class="nav">
         <a href="javascript:void(0)">网关设置&nbsp;&gt;</a>
         <a href="javascript:void(0)">恢复出厂设置&nbsp;</a>
-        <button class="return_a" onclick="change_dir('/setup')">返回</button>
+        <button class="return_a">返回</button>
     </div>
     <div class="fix_ie_shadow rally_fix_ie_shadow"></div>
     <div class="form-border-shadow">
