--- a/web/templates/upgrade.html
+++ b/web/templates/upgrade.html
@@ -5,7 +5,7 @@
     <div class="nav">
         <a href="javascript:void(0)">网关设置&nbsp;&gt;</a>
         <a href="javascript:void(0)">系统升级&nbsp;</a>
-        <button class="return_a" onclick="change_dir('/setup')">返回</button>
+        <button class="return_a">返回</button>
     </div>
     <style>
         .fix_ie_shadow {
