--- a/web/templates/settime.html
+++ b/web/templates/settime.html
@@ -42,9 +42,9 @@
                 <span id="current_time"></span>
             </div>
             <div class="item">
-                <label class="form-label" id="lbl_get_time">系统时间获取方式</label>
+                <label class="form-label" id="lbl_get_time">网关时间获取方式</label>
                 <input type="radio" id="get_time_mode0" onclick="change_get_time_mode(this.value);" value="0" name="get_time_mode" checked="checked">
-                <label id="lbl_get_time_mode0" for="get_time_mode0">NTP(网上获取)</label>
+                <label id="lbl_get_time_mode0" for="get_time_mode0">与系统时间一致</label>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <input type="radio" id="get_time_mode1" onclick="change_get_time_mode(this.value);" value="1" name="get_time_mode">
                 <label id="lbl_get_time_mode1" for="get_time_mode1">手动配置</label>
