--- a/web/templates/gateway_setup.html
+++ b/web/templates/gateway_setup.html
@@ -19,7 +19,7 @@
 						{% raw xsrf_form_html() %}
 						<div class="item">
 							<label class="form-label" id="">网关ID</label>
-							<input type="text" class="input-text input-biger" maxlength="16" size="27" name="gateway_id" id="gateway_id" autocomplete="off" value="{{gateway.sn}}">
+							<input type="text" class="input-text input-biger" maxlength="16" size="27" name="gateway_id" id="gateway_id" autocomplete="off" value="{{gateway['sn']}}">
 						</div>
 						<div class="item opt">
 							<input type="submit" class="btn submit_btn btn_confirm" onclick="mygateway_setup_submit()" value="确定">
