upgrade and backup

--- a/web/templates/restore.html
+++ b/web/templates/restore.html
@@ -41,6 +41,7 @@
                 </div>
                 <div class="opt">
                     <input type="submit" onclick="RstoreDefault();" class="btn submit_btn btn_default" value="恢复出厂设置">
+                    <input type="button" id="backup" class="btn gray" value="备份">
                 </div>
             </form>
         </div>
