--- a/web/templates/upgrade.html
+++ b/web/templates/upgrade.html
@@ -33,8 +33,8 @@
     <div class="form-border-shadow has-tab">
         <div class="box-bd form-area">
             <div class="tab_area" id="update_mode_layer">
-                <div class="tab-item on" id="div_manual_update_title" data-type-index="0">手动升级</div>
-                <div class="tab-item" id="div_auto_update_title" data-type-index="1">在线升级</div>
+                <!-- <div class="tab-item on" id="div_manual_update_title" data-type-index="0">手动升级</div>
+                <div class="tab-item" id="div_auto_update_title" data-type-index="1">在线升级</div> -->
             </div>
             <div class="app-box section_show" id="manual_update_div">
                 <div class="box-bd">
@@ -44,12 +44,6 @@
                         <input type="text" id="sha256" name="sha256" hidden>
                         <div class="rally_center_tip center_tip">
                             <span id="div_manual_update_tip">升级软件需要花费几分钟的时间，请不要关闭电源或按重置按钮!</span>
-                        </div>
-                        <div class="item">
-                            <center>
-                                <label id="span_cur_ver">当前版本</label>
-                                <span id="current_version">{{firmware.version}}</span>
-                            </center>
                         </div>
                         <div class="item" style="position:relative;">
                             <!--<label for="put_file" class="form-label" id="lbl_put_file"></label>-->
