唤醒时间单位改为秒

--- a/gwweb/templates/radio1_param.html
+++ b/gwweb/templates/radio1_param.html
@@ -5,7 +5,7 @@
     <!-- 唤醒时间 -->
         <label class="form-label" for="wakeup">唤醒时间</label>
         <input type="text" id="wakeup" name="wakeup" class="input-text input-small" style="width:130px;" value="{{radio.wakeup}}">
-        <span class="word_sep">分钟</span>
+        <span class="word_sep">秒</span>
     </div>
     <div class="item">
     <!-- 重复次数 -->
